--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -237,7 +237,7 @@
                             </span>
                             <span>Continue shopping</span>
                         </a>
-                        <a href="{% url 'products' %}" class="my-2 my-sm-0 btn btn-info">
+                        <a href="{% url 'checkout' %}" class="my-2 my-sm-0 btn btn-info">
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
                             </span>
