--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,6 +1,23 @@
+.checkout-list{
+    max-height: 500px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+
 /* media responsiveness */
+
+/* per width */
+
+@media only screen and (max-width: 991px){
+    .checkout-list{
+        max-height: 250px;
+    }
+}
 @media only screen and (max-width: 436px){
     .text-co-smaller{
     font-size: 13px;
-  }
+    }
 }
+
+/* per height */
