added total items quantity in the checkout html

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -28,8 +28,8 @@
     <div class="rounded mt-1 mb-3 my-md-4 bag-main-div col-10 offset-1 bg-light p-2">
         <div class="row">
             <div class="col-12 text-start mt-2">
-                <h2 class="d-none d-sm-block">Your Shopping Bag:</h2>
-                <h4 class="d-sm-none mb-0" >Your Shopping Bag:</h4>
+                <h2 class="d-none d-sm-block">Checkout:</h2>
+                <h4 class="d-sm-none mb-0" >Checkout:</h4>
             </div>
         </div>
         <hr class="w-100 mb-1">
@@ -39,6 +39,7 @@
             <!-- checkout product list -->
             <div class="col-12 col-lg-6 order-lg-last mt-2 ">
                 <div class="row ">
+                    <p>Total items {{ product_count}} </p>
                     <div class="col-8">
                         <p class="mb-1 mt-0 small text-muted">Item</p> 
                     </div>
