--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -100,8 +100,12 @@
                     </fieldset>  
                     <fieldset class="rounded px-3 my-1">
                         <legend class="fieldset-label w-auto small text-black px-2">Payment</legend>
-                        <div class="mb-1" id="card-element"></div>
-                        <div class="mb-1 text-danger" role="alert" id="card-errors"></div>
+                        <!--A stripe Card element will go here-->
+                        <div id="card-element"></div>
+                        <!--Used to display form errors-->
+                        <div id="card-errors" role="alert"></div>
+                        <!-- Pass the client secret to the view so we can get the payment intent id -->
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>  
                     
                     <div class="text-start my-3 px-3">
