updated checkout views and installed stripe

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -41,7 +41,7 @@
 #payment-form .form-control,
 #card-element {
     color: #000;
-    border: 1px solid #000;
+    border: 1px solid rgb(202, 202, 202);
     border-radius: 5px;
 }
 
