--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -103,7 +103,7 @@
                         <!--A stripe Card element will go here-->
                         <div id="card-element"></div>
                         <!--Used to display form errors-->
-                        <div id="card-errors" role="alert"></div>
+                        <div id="card-errors" class="text-danger ps-1" role="alert"></div>
                         <!-- Pass the client secret to the view so we can get the payment intent id -->
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>  
