tested intent in checkout page and updated views.py checkout

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -99,7 +99,7 @@
                         </div>
                     </fieldset>  
                     <fieldset class="rounded px-3 my-1">
-                        <legend class="fieldset-label w-auto small text-black px-2">Payment</legend>
+                        <legend class="fieldset-label w-auto small text-black px-2">Insert your card details:</legend>
                         <!--A stripe Card element will go here-->
                         <div id="card-element"></div>
                         <!--Used to display form errors-->
