--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -97,7 +97,8 @@
                 </div>
                 <!-- subtotal product -->
                 <div class="col-12 col-sm-6">
-                    <p class="pt-2 text-center mt-0 mb-1"><span class="fw-bolder">Product subtotal: </span>€{{ product.product.price | prd_subtotal:product.quantity }}</p>
+                    <p class="pt-2 text-center
+                    mt-0 mb-1"><span class="fw-bolder">Product subtotal: </span>€{{ product.product.price | prd_subtotal:product.quantity }}</p>
                 </div>
             </div>
             <hr class="w-100 mt-1 mb-4">
