updated products html page

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -19,15 +19,21 @@
         </div>
         <hr class="w-100 mb-1">
 
-        <div class="row checkout-main-div">
-
-            <!-- checkout product list -->
-            <div class="col-12 col-lg-6 order-lg-last mt-2 ">
+        <div class="row">
+            <div class="col-12 col-lg-7">
                 <a href="{% url 'home' %}" class="btn btn-outline-info my-2">
                     <span>
                         <i class="fas fa-chevron-left"></i>
                     </span>
                     <span>Go back to the home page</span>
+                </a>
+            </div>
+            <div class="col-12 col-lg-5">
+                <a href="{% url 'home' %}" class="btn btn-outline-info my-2">
+                    <span>
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span>test test</span>
                 </a>
             </div>
         </div>
