--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -55,23 +55,25 @@ select option[value=""] {
   color: #aab7c4 !important;
 }
 
+/* Spinner css based on Code Institute's Boutiquw Ado Project */
+
 #loading-overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(221, 221, 221, 0.85);
-  z-index: 9999999;
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  background: rgba(13, 202, 240, 0.75);
+  z-index: 99999999999999999999999999;
 }
 
 .loading-spinner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	height: 100%;
 }
 
 /* media responsiveness */
