--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -8,8 +8,17 @@
 
 {% block content %}
 
-<div class="container-fluid">
+<!-- loading overlay -->
+<div id="loading-overlay">
+    <h1 class="text-light logo-font loading-spinner">
+       <span class="icon">
+       <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+       </span>
+    </h1>
+ </div>
 
+
+<div class="container-fluid">
     <!-- bag path -->
     <div class="row sm-font text-center">
         <div class="col-12 mt-1">
@@ -22,8 +31,7 @@
     </div>
 </div>
 
-<!-- bag header -->
-
+<!-- checkout header -->
 <div class="container-fluid row g-0">
     <div class="rounded mt-1 mb-3 my-md-4 bag-main-div col-10 offset-1 bg-light p-2">
         <div class="row">
@@ -99,6 +107,7 @@
                         </div>
                     </fieldset>  
                     <fieldset class="rounded px-3 my-1">
+                        <!-- test cards 4000 0027 6000 3184 -->
                         <legend class="fieldset-label w-auto small text-black px-2">Payment</legend>
                         <!--A stripe Card element will go here-->
                         <div id="card-element"></div>
@@ -140,9 +149,9 @@
                 </form>
            </div>
         </div>
-
    </div>
 </div>
+
 {% endblock %}
 
 {% block postloadjs %}
