--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -8,16 +8,6 @@
 
 {% block content %}
 
-<!-- loading overlay -->
-<div id="loading-overlay">
-    <h1 class="text-light logo-font loading-spinner">
-       <span class="icon">
-       <i class="fas fa-3x fa-sync-alt fa-spin"></i>
-       </span>
-    </h1>
- </div>
-
-
 <div class="container-fluid">
     <!-- bag path -->
     <div class="row sm-font text-center">
@@ -149,9 +139,17 @@
                 </form>
            </div>
         </div>
+
    </div>
 </div>
 
+<div id="loading-overlay">
+    <h1 class="loading-icon">
+        <span>
+            <i class="fas fa-spinner fa-pulse"></i>
+        </span>
+    </h1>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
