--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,4 +1,4 @@
-/* checkout list */
+/* checkout */
 
 .checkout-list{
     max-height: 500px;
@@ -6,13 +6,23 @@
     overflow-y: auto;
 }
 
+select,
+select option {
+	color: #000000;
+}
+
+select:invalid,
+select option[value=""] {
+	color: #aab7c4 !important;
+}
+
 /* stripe */
 
 .StripeElement,
 .stripe-style-input {
   box-sizing: border-box;
-  height: 40px;
-  padding: 10px 12px;
+  height: 42px;
+  padding: 8px 12px;
   border: 1px solid transparent;
   box-shadow: 0 1px 3px 0 #e6ebf1;
   -webkit-transition: box-shadow 150ms ease;
