--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
                                 <a class="nav-link link-exp underline-transition" href="{% url 'account_logout' %}">Logout</a>
                             </li>
                             <li class="nav-item user-link-btm">
-                                <a class="nav-link link-exp underline-transition" href="{% url 'home' %}">My Profile</a>
+                                <a class="nav-link link-exp underline-transition" href="{% url 'profile' %}">My Profile</a>
                             </li>
                         {% else %}
                             <li class="nav-item user-link-top">
