updated a few allauth html templates

--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -5,7 +5,16 @@
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block content %}
+<div class="container-fluid row g-0">
+    <div class="rounded my-4 prd-main-div col-10 offset-1 bg-light">
+      <div class="row">
+        <div class="col-lg-10 offset-lg-1 col-12 mb-4 p-4">
 <h1>{% trans "Account Inactive" %}</h1>
 
 <p>{% trans "This account is inactive." %}</p>
+
+       </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
