--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -5,6 +5,10 @@
 {% block head_title %}{% trans "Account" %}{% endblock %}
 
 {% block content %}
+<div class="container-fluid row g-0">
+  <div class="rounded my-4 prd-main-div col-10 offset-1 bg-light">
+    <div class="row">
+      <div class="col-lg-10 offset-lg-1 col-12 mb-4 p-4">
     <h1>{% trans "E-mail Addresses" %}</h1>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
@@ -52,6 +56,10 @@
         {{ form.as_p }}
         <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
     </form>
+   </div>
+  </div>
+ </div>
+</div>
 
 {% endblock %}
 
