--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -6,6 +6,10 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+<div class="container-fluid row g-0">
+    <div class="rounded my-4 prd-main-div col-10 offset-1 bg-light">
+      <div class="row">
+        <div class="col-lg-10 offset-lg-1 col-12 mb-4 p-4">
     <h1>{% trans "Password Reset" %}</h1>
     
     {% if user.is_authenticated %}
@@ -13,4 +17,9 @@
     {% endif %}
     
     <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+</div>
+</div>
+</div>
+</div>
+
 {% endblock %}
