--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,14 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+<div class="container-fluid row g-0">
+    <div class="rounded my-4 prd-main-div col-10 offset-1 bg-light">
+      <div class="row">
+        <div class="col-lg-10 offset-lg-1 col-12 mb-4 p-4">
     <h1>{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
+   </div>
+  </div>
+ </div>
+</div>
 {% endblock %}
