--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -5,6 +5,10 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
+<div class="container-fluid row g-0">
+    <div class="rounded my-4 prd-main-div col-10 offset-1 bg-light">
+      <div class="row">
+        <div class="col-lg-10 offset-lg-1 col-12 mb-4 p-4">
     <h1>{% trans "Set Password" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
@@ -13,3 +17,7 @@
         <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
     </form>
 {% endblock %}
+</div>
+</div>
+</div>
+</div>
