--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -16,7 +16,25 @@
             </div>
         </div>
         <hr class="w-100 mb-1">
+
+        <!--Customer's saved delivery details form-->
+        <div class="row">
+            <!--Delivery Information-->
+            <div class="col-sm-12 col-lg-6">
+                <p>Delivery Details</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}                    
+                    <button class="btn btn-info">Update Information</button>
+                </form>
+            </div>
+            <!--Order History-->
+            <div class="col-sm-12 col-lg-6">
+                <p class="text-muted">Order History</p>
+                {{ orders }}
+            </div>
+        </div>
     </div>
 </div>
-{{profile}}
+
 {% endblock %}
