--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -36,12 +36,12 @@
                        <thead>
                           <tr>
                              <th>Order Number</th>
-                             <th class="text-center">Order Date</th>
-                             <th class="text-center">Items</th>
-                             <th class="text-center">Order Total</th>
+                             <th class="text-start">Order Date</th>
+                             <th class="text-start">Items</th>
+                             <th class="text-start">Order Total</th>
                           </tr>
                        </thead>
-                       <tbody>
+                       <tbody class="small">
                           {% for order in orders %}
                           <tr>
                              <td>
@@ -60,7 +60,7 @@
                                    {% endfor %}
                                 </ul>
                              </td>
-                             <td class="text-center">€{{ order.final_total }}</td>
+                             <td class="text-start">€{{ order.final_total }}</td>
                           </tr>
                           {% endfor %}
                        </tbody>
