fixed bug: user was unable to land in the checkout success page. i forgot to uncomment the form submission after test. also, centered the loading arrows

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -191,7 +191,7 @@ transition: 0.4s;
     position: fixed;
     top: 75px;
     right: 10px;
-    z-index: 99999999999;
+    z-index: 99999;
 }
 
 .custom-toast{
