--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -68,7 +68,7 @@
             <!-- checkout form -->
             <div class="col-12 col-lg-6 mt-3">
                 <p class="text-muted">Please fill out this form below to complete your order:</p>
-                <form action="{% url 'checkout' %}" method="POST" id="checkout-form">
+                <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
                     <fieldset class="rounded px-3 mb-2 mb-md-4">
                         <legend class="fieldset-label w-auto small text-black px-2">Your details:</legend>
@@ -116,7 +116,7 @@
                     </div>
 
                     <!-- payment submit btn -->
-                    <div class="submit-button text-center text-md-end my-2 px-3">
+                    <div class="text-center text-md-end my-2 px-3">
                         <a href="{% url 'view_bag' %}" class="btn mt-1">
                             <span>
                                 <i class="fas fa-chevron-left"></i>
@@ -143,10 +143,10 @@
 </div>
 
 <div id="loading-overlay">
-    <h1 class="loading-icon">
-        <span>
-            <i class="fas fa-spinner fa-pulse"></i>
-        </span>
+    <h1 class="text-light logo-font loading-spinner">
+       <span class="icon">
+       <i class="fas fa-sync-alt fa-spin"></i>
+       </span>
     </h1>
 </div>
 {% endblock %}
