--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 <!-- profile header -->
-<div class="container-fluid row g-0">
-    <div class="rounded mt-1 mb-3 my-md-4 bag-main-div col-10 offset-1 bg-light p-2">
+<div class="container-fluid row g-0 black">
+    <div class="rounded mt-2 mt-sm-5 profile-main-div col-10 offset-1 bg-light p-2">
         <div class="row">
             <div class="col-12 text-start mt-2">
                 <h2 class="d-none d-sm-block">My Profile</h2>
